2012-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/audio_codec.cpp:
	* rcsc/player/say_message_builder.cpp:
	- ボール速度の圧縮方法を値域全体の正規化から絶対値の正規化+正負フ
	ラグに変更．速度0を正確に伝えられるようになったが，情報の精度はや
	や落ちる

	* rcsc/common/say_message_parser.cpp:
	- デバッグ出力の数値の精度を上げた

2012-05-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.h:
	- heardVel()とheardVelCount()が無かったので追加

2012-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/common/player_param.cpp:
	* rcsc/common/server_param.cpp:
	* rcsc/param/cmd_line_parser.cpp:
	* rcsc/param/conf_file_parser.cpp:
	* rcsc/param/conf_file_parser.h:
	* rcsc/param/param_map.cpp:
	* rcsc/param/param_map.h:
	* rcsc/param/rcss_param_parser.cpp:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	* rcsc/trainer/trainer_agent.cpp:
	* rcsc/trainer/trainer_config.cpp:
	* rcsc/trainer/trainer_config.h:
	- ParamPtrをParamEntity::Ptrへ変更
	- ConfFileParserでrealm文字列をパースできていなかったバグ修正
	- Configクラスの設計を改善し，パラメータマップの生成をクラス内部で完結

	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- setplayCount()をgetSetPlayCount()へリネーム
	- WaitRequestメッセージによる修正処理を削除し，getSetPlayCount()の
	値を正確にセットプレイ開始後のカウント数に変更

	* rcsc/coach/coach_debug_client.cpp:
	* rcsc/player/debug_client.cpp:
	- 観測した指差し方向をデバッグサーバメッセージに含めるように変更

2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* librcsc-config.in:
	* librcsc.pc.in:
	- clang, color, timeを追加

	* rcsc/player/abstract_player_object.cpp:
	* rcsc/player/abstract_player_object.h:
	* rcsc/player/ball_object.cpp:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/self_object.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- サイドや背番号が不明なプレイヤを一意に識別するためのID番号を追加した．IDは観測された順番に割り振られる

2012-05-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_agent.h: