@@ -1,3 +1,10 @@
+2012-05-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/body_advance_ball2009.cpp:
+	* rcsc/action/body_intercept2009.cpp:
+	* rcsc/action/neck_turn_to_goalie_or_scan.cpp:
+	- ログレベルの誤りを修正
+
 2012-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/common/audio_codec.cpp:
